Fix extra scrollbars in chrome

--- a/css/ui.css
+++ b/css/ui.css
@@ -682,7 +682,7 @@ iframe {
 }
 
 .treeContainer {
-  overflow: auto;
+  overflow: hidden;
   display: flex;
   flex-flow: row nowrap;
   height: 100%;
